force-app/main/default/objects/Form_Submission__c/Form_Submission__c.object-meta.xml
<CustomObject>
    <description>A filled instance of a form template. Holds answer data and drives the approval state machine.</description>
    <label>Form Submission</label>
    <pluralLabel>Form Submissions</pluralLabel>
    <nameField>
        <label>Submission Number</label>
        <type>AutoNumber</type>
        <displayFormat>SUB-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>