force-app/main/default/objects/Form_Submission__c/fields/Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Data_JSON__c</fullName>
    <label>Data JSON</label>
    <description>Flat fieldId-to-value map of answers. Secondary data; PDF is source of truth.</description>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>