force-app/main/default/objects/Form_Submission__c/fields/Document_Hash__c.field-meta.xml
<CustomField>
    <fullName>Document_Hash__c</fullName>
    <label>Document Hash</label>
    <description>SHA-256 of the final PDF. Integrity proof of the official record.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>