force-app/main/default/objects/Form_Submission__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <label>Engineer</label>
    <description>User who fills and signs as engineer.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submissions (Engineer)</relationshipLabel>
    <relationshipName>Submissions_Engineer</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>