force-app/main/default/objects/Form_Submission__c/fields/Final_PDF_CV_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_PDF_CV_Id__c</fullName>
    <label>Final PDF ContentVersion Id</label>
    <description>ContentVersion Id of the generated official PDF.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>