force-app/main/default/objects/Form_Submission__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <label>Form Template</label>
    <description>Lookup (not master-detail): signed audit records must survive template deletion and keep independent sharing.</description>
    <type>Lookup</type>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>