force-app/main/default/objects/Form_Submission__c/fields/Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comment__c</fullName>
    <label>Rejection Comment</label>
    <description>Supervisor feedback when status set to Rejected.</description>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>