force-app/main/default/objects/Form_Submission__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <label>Revision Number</label>
    <description>Increments each time a rejected submission is resubmitted.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>