force-app/main/default/objects/Form_Submission__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <description>Verifier who approves or rejects.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submissions (Supervisor)</relationshipLabel>
    <relationshipName>Submissions_Supervisor</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>