force-app/main/default/objects/Form_Submission__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <label>Template Version</label>
    <description>Version of the template used at fill time. Audit reference only; Pilihan A = no re-render.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>